@@ -53,6 +53,7 @@
             Tensorflow: updated to v2.2, removed un-needed ops (reduces size by 24k)
             Puck.js: Fix Puck.magTemp();
             Puck.js v1: Fix magnetometer reading after puck.magOn (2v05 regression) - use old software I2C implementation
+<<<<<<< HEAD
             I2C: Improve software I2C (now quickly forces I2C high before pullup, to help improve clock speed)
             Bangle.js: Fix GPS-raw events to provde also u-blox UBX Protocol messages (fix #1838)
             Bangle.js: Save RAM in GPS handling, allow arbitrary length data returned (fix #1843)
@@ -64,6 +65,8 @@
             Bangle.js: Fix occasional execution errors when executing from Flash (fix #1854)
             Add Graphics.transformVertices()
             Re-add Graphics.quadraticBezier for Bangle.js, move to integer math to halve fn size
+=======
+>>>>>>> parent of 0574da31... GPS-raw event ArrayBuffer, handle UBX protocol
 
      2v05 : Add Array.includes
             Fix (Number.toFixed) rounding, eg (1234.505).toFixed(2)
